...
    android:layout_height="match_parent"
    tools:context="com.example.tomdong.sanity.TransactionPickerFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/trans_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="View your transactiopns of time period:"
        android:layout_alignParentTop="true"
...
