...
    android:background="@drawable/budget_view_background"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.example.tomdong.sanity.BudgetFragment"
    tools:listitem="@layout/fragment_budget">

    <TextView
        android:id="@+id/my_cat_text"
        android:layout_width="373dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
...
