...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        app:srcCompat="@drawable/my_budgets_icon" />

    <TextView
        android:id="@+id/myBudgets_textview"
        android:layout_width="282dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
...
